kubernetes/applications/kromgo/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: kromgo
  namespace: kromgo
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: PLACEHOLDER
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      middlewares:
        - name: chain-standard
          namespace: ingress-controller
      services:
        - kind: Service
          name: kromgo
          port: 80
  tls:
    secretName: kromgo-tls
